@@ -10,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.Assert;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FuncionarioService {
@@ -26,7 +25,7 @@ public class FuncionarioService {
     public List<FuncionarioDTO> findAll() {
         List<Funcionario> funcionarios = this.funcionarioRepository.findAll();
 
-        return funcionarios.stream().map(item -> funcionarioConverter.convertToFuncionarioDTO(item)).collect(Collectors.toList());
+        return funcionarios.stream().map(item -> funcionarioConverter.convertToFuncionarioDTO(item)).toList();
     }
 
     @Transactional(rollbackFor = Exception.class)
